ingress/helloworld-v1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v12-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v1
  template:
    metadata:
      labels:
        app: helloworld-v1
    spec:
      containers:
      - name: testapp-ctr
        image: kikeymeenan/testapp1
        imagePullPolicy: IfNotPresent
        ports:
        - name: testapp-ext
          containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v1
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31006
    targetPort: testapp-ext
    protocol: TCP
    name: http
  selector:
    app: helloworld-v1
