ingress/helloworld-v2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v22-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld-v2
  template:
    metadata:
      labels:
        app: helloworld-v2
    spec:
      containers:
      - name: k8s-demo
        image: kikeymeenan/testapp2
        imagePullPolicy: IfNotPresent
        ports:
        - name: testapp2-ext
          containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: helloworld-v2
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 31007
    targetPort: testapp2-ext
    protocol: TCP
    name: http
  selector:
    app: helloworld-v2
